img not showing problem solved the err is '/ in front of the img/example.jeg'

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     padding: 0;
     margin: 0;
-    background-image: url(/img/env.jpg);
+    background-image: url(img/env.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     color: white !important;
